[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "certification"
authors = [
    {name = "Samuel Lelièvre", email = "samuel.lelievre@math.cnrs.fr"}, 
    {name = "Katja Berčič", email = "katja.bercic@fmf.uni-lj.si"}
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/katjabercic/certification-sage"
